{
  "version": 4,
  "terraform_version": "1.15.4",
  "serial": 22,
  "lineage": "91104b71-a466-0a98-98a5-49b346ce984d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lks_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464253666565:internet-gateway/igw-0460f9cb48fbb5136",
            "id": "igw-0460f9cb48fbb5136",
            "owner_id": "464253666565",
            "tags": {
              "Name": "LKS-IGW"
            },
            "tags_all": {
              "Name": "LKS-IGW"
            },
            "vpc_id": "vpc-012e7cccbb9322762"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.lks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lks_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:464253666565:loadbalancer/app/lks-web-alb/2dfde0adb2be6312",
            "arn_suffix": "app/lks-web-alb/2dfde0adb2be6312",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "lks-web-alb-291970622.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:464253666565:loadbalancer/app/lks-web-alb/2dfde0adb2be6312",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lks-web-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04003fcd4c641ff48"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04c7a0d4b3059af3d"
              },
              {
                "subnet_id": "subnet-0f20d88088ee8de50"
              }
            ],
            "subnets": [
              "subnet-04c7a0d4b3059af3d",
              "subnet-0f20d88088ee8de50"
            ],
            "tags": {
              "Name": "LKS-Web-ALB"
            },
            "tags_all": {
              "Name": "LKS-Web-ALB"
            },
            "vpc_id": "vpc-012e7cccbb9322762",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.lks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:464253666565:listener/app/lks-web-alb/2dfde0adb2be6312/0d8c9ca41ca394ff",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:464253666565:targetgroup/lks-app-tg/993cffb215eb4ab8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:464253666565:listener/app/lks-web-alb/2dfde0adb2be6312/0d8c9ca41ca394ff",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:464253666565:loadbalancer/app/lks-web-alb/2dfde0adb2be6312",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.lks_alb",
            "aws_lb_target_group.lks_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.lks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lks_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:464253666565:targetgroup/lks-app-tg/993cffb215eb4ab8",
            "arn_suffix": "targetgroup/lks-app-tg/993cffb215eb4ab8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:464253666565:targetgroup/lks-app-tg/993cffb215eb4ab8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lks-app-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-012e7cccbb9322762"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.lks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464253666565:route-table/rtb-0c3f6e4788ae2f93b",
            "id": "rtb-0c3f6e4788ae2f93b",
            "owner_id": "464253666565",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0460f9cb48fbb5136",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "LKS-Public-RouteTable"
            },
            "tags_all": {
              "Name": "LKS-Public-RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-012e7cccbb9322762"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.lks_igw",
            "aws_vpc.lks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0356e4280a86da3d5",
            "route_table_id": "rtb-0c3f6e4788ae2f93b",
            "subnet_id": "subnet-04c7a0d4b3059af3d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.lks_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_1",
            "aws_vpc.lks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bad4fa80a05a6ea7",
            "route_table_id": "rtb-0c3f6e4788ae2f93b",
            "subnet_id": "subnet-0f20d88088ee8de50"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.lks_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_2",
            "aws_vpc.lks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464253666565:security-group/sg-04003fcd4c641ff48",
            "description": "Allow HTTP public traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04003fcd4c641ff48",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lks-alb-sg",
            "name_prefix": "",
            "owner_id": "464253666565",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "LKS-ALB-SG"
            },
            "tags_all": {
              "Name": "LKS-ALB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-012e7cccbb9322762"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.lks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464253666565:security-group/sg-0e1c511db11892170",
            "description": "Allow traffic to RDS and ElastiCache from EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1c511db11892170",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04590c28b8f33ff7b"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04590c28b8f33ff7b"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "lks-database-sg",
            "name_prefix": "",
            "owner_id": "464253666565",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "LKS-DB-SG"
            },
            "tags_all": {
              "Name": "LKS-DB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-012e7cccbb9322762"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_vpc.lks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464253666565:security-group/sg-04590c28b8f33ff7b",
            "description": "Allow traffic from ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04590c28b8f33ff7b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04003fcd4c641ff48"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "lks-ec2-sg",
            "name_prefix": "",
            "owner_id": "464253666565",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "LKS-EC2-SG"
            },
            "tags_all": {
              "Name": "LKS-EC2-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-012e7cccbb9322762"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.lks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464253666565:subnet/subnet-04ec129e052fe6ee0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ec129e052fe6ee0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "464253666565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "LKS-Private-Subnet-1"
            },
            "tags_all": {
              "Name": "LKS-Private-Subnet-1"
            },
            "vpc_id": "vpc-012e7cccbb9322762"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.lks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464253666565:subnet/subnet-00aaca7380b52db7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00aaca7380b52db7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "464253666565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "LKS-Private-Subnet-2"
            },
            "tags_all": {
              "Name": "LKS-Private-Subnet-2"
            },
            "vpc_id": "vpc-012e7cccbb9322762"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.lks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464253666565:subnet/subnet-04c7a0d4b3059af3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c7a0d4b3059af3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "464253666565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "LKS-Public-Subnet-1"
            },
            "tags_all": {
              "Name": "LKS-Public-Subnet-1"
            },
            "vpc_id": "vpc-012e7cccbb9322762"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.lks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464253666565:subnet/subnet-0f20d88088ee8de50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f20d88088ee8de50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "464253666565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "LKS-Public-Subnet-2"
            },
            "tags_all": {
              "Name": "LKS-Public-Subnet-2"
            },
            "vpc_id": "vpc-012e7cccbb9322762"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.lks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464253666565:vpc/vpc-012e7cccbb9322762",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e68c3c8f2e0ea8b7",
            "default_route_table_id": "rtb-0e4ee172863bb7cb2",
            "default_security_group_id": "sg-07b7aebb5a3899d1c",
            "dhcp_options_id": "dopt-057e093a633a0271f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-012e7cccbb9322762",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e4ee172863bb7cb2",
            "owner_id": "464253666565",
            "tags": {
              "Name": "LKS-VPC"
            },
            "tags_all": {
              "Name": "LKS-VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}